Enhance task management by adding meetingId support across various components. Update task creation logic to include meetingId in task body, improve task extraction from API, and implement navigation to meeting outcomes. Modify TaskCard to handle meetingId for win deal actions and adjust UI elements for better user experience.

--- a/apps/hubspot-ui/index.html
+++ b/apps/hubspot-ui/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ali - Field Sales App</title>
-    <meta name="description" content="ali - Field Sales Application powered by HubSpot" />
+    <meta name="description" content="ali - Field Sales Application" />
     <meta name="author" content="ali" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://i.postimg.cc/6QwPGns1/Chat-GPT-Image-May-5-2025-07-45-31-AM.png" />
     <style>
       .logo-container {
         background: #E9A68A;
